--- a/Week_18_NLP_Tasks_and_Methods.ipynb
+++ b/Week_18_NLP_Tasks_and_Methods.ipynb
@@ -6,7 +6,7 @@
       "name": "Week 18 - NLP Tasks and Methods.ipynb",
       "provenance": [],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOB1hB/E2sis1Sz+XVNmzhZ",
+      "authorship_tag": "ABX9TyO+m99dveD8UKwyJoTB5IDl",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -71,7 +71,7 @@
         "id": "P1n_HZacUXOo"
       },
       "source": [
-        "## 1 What is text classification\r\n",
+        "## What is text classification\r\n",
         "---\r\n",
         "Text classification is one of the simplest NLP tasks, where the model, given some input text, predicts a label for the text. See the figure below for an illustration.\r\n",
         "\r\n",
