--- a/Week_18_NLP_Tasks_and_Methods.ipynb
+++ b/Week_18_NLP_Tasks_and_Methods.ipynb
@@ -5,8 +5,7 @@
     "colab": {
       "name": "Week 18 - NLP Tasks and Methods.ipynb",
       "provenance": [],
-      "toc_visible": true,
-      "authorship_tag": "ABX9TyO+m99dveD8UKwyJoTB5IDl",
+      "authorship_tag": "ABX9TyO998Ht33tcLtd6P/Xi3Cue",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -88,7 +87,8 @@
         "| --- | --- | --- |--- |\r\n",
         "|Spam filtering |Detect and filter spam emails | Email |Spam / Not spam |\r\n",
         "|Sentiment analysis|Detect the polarity of text |Tweet, review|Positive / Negative|\r\n",
-        "|Topic detection | Detect the topic of text | News article, blog post | Business / Tech / Sports|"
+        "|Topic detection | Detect the topic of text | News article, blog post | Business / Tech / Sports|\r\n",
+        "|Language indentification | Detect the language of text | Written text|Igbo / English / Russian|"
       ]
     },
     {
@@ -193,6 +193,142 @@
         "Ideally, the output label would be optional when we create the Instances, so that we can use the same code to make predictions on unlabeled data (say, in a demo), but for the rest of this chapter we’ll keep things simple and ignore that.\r\n",
         "\r\n",
         "There are lots of places where this could be made better for a more flexible and fully-featured reader; see the section on `DatasetReaders` for a deeper dive."
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "QIrmtkivwudj"
+      },
+      "source": [
+        "## Designing your model\r\n",
+        "---\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src='https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/batch_model_loss.png?raw=true' />\r\n",
+        "<figcaption>The Batch-Model-Loss structure</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "The next thing we need is a Model that will take a batch of Instances, predict the outputs from the inputs, and compute a loss.\r\n",
+        "Remember that our Instances have this input/output spec:\r\n",
+        "```\r\n",
+        "# Inputs\r\n",
+        "text: TextField\r\n",
+        "\r\n",
+        "# Outputs\r\n",
+        "label: LabelField\r\n",
+        "```\r\n",
+        "Also, remember that we used these names (text and label) for the fields in the DatasetReader. AllenNLP passes those fields by name to the model code, so we need to use the same names in our model.\r\n",
+        "\r\n",
+        "### What should our model do?\r\n",
+        "\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src='https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/text_model_labels.png?raw=true' />\r\n",
+        "<figcaption>Expanded Batch-Model-Loss structure</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "Conceptually, a generic model for classifying text does the following:\r\n",
+        "  - Get some features corresponding to each word in your input\r\n",
+        "  - Combine those word-level features into a document-level feature vector\r\n",
+        "  - Classify that document-level feature vector into one of your labels.\r\n",
+        "\r\n",
+        "The `allennlp` library makes each of these conceptual steps into a generic abstraction that you can use in your code, so that you can have a very flexible model that can use different concrete components for each step.\r\n",
+        "\r\n",
+        "### Representing text with token IDs\r\n",
+        "\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src='https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/tokenIDs_models_labels.png?raw=true' />\r\n",
+        "<figcaption>Token IDs are often used as initial inputs</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "The first step is changing the strings in the input text into token ids. This is handled by the SingleIdTokenIndexer that we used previously, during part of our data processing pipeline that you don’t have to write code for\r\n",
+        "\r\n",
+        "### Embedding tokens\r\n",
+        "\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src='https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/embedding_tokens_labels.png?raw=true' />\r\n",
+        "<figcaption>Token IDs are often used as initial inputs</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "The first thing the `Model` does is apply an `Embedding` function that converts each token ID that we got as input into a vector. This gives us a vector for each input token, so we have a large tensor here.\r\n",
+        "\r\n",
+        "## Apply Seq2Vec encoder\r\n",
+        "\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src='https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/apply_seq2seq_encoder.png?raw=true' />\r\n",
+        "<figcaption>Token IDs are often used as initial inputs</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "Next we apply some function that takes the sequence of vectors for each input token and squashes it into a single vector. Before the days of pretrained language models like BERT, this was typically an LSTM or convolutional encoder. With BERT we might just take the embedding of the `[CLS]` token.\r\n",
+        "\r\n",
+        "### Computing distribution over labels\r\n",
+        "\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src='https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/compute_distributions_over_labels.png?raw=true' />\r\n",
+        "<figcaption>Token IDs are often used as initial inputs</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "Finally, we take that single feature vector (for each Instance in the batch), and classify it as a label, which will give us a categorical probability distribution over our label space.\r\n",
+        "\r\n",
+        "## Implementing the model - the constructor\r\n",
+        "---\r\n",
+        "<figure>\r\n",
+        "<center>\r\n",
+        "<img src= 'https://github.com/IgnatiusEzeani/NLP-Lecture/blob/main/img/allennlp_model_basic.png?raw=true' />\r\n",
+        "<figcaption>Token IDs are often used as initial inputs</figcaption></center>\r\n",
+        "</figure>\r\n",
+        "\r\n",
+        "Now that we know what our model is going to do, we need to implement it. First, we’ll say a few words about how `Models` work in `AllenNLP`:\r\n",
+        " - An AllenNLP `Model` is just a PyTorch `Module`\r\n",
+        " - It implements a `forward()` method, and requires the output to be a _dictionary_.\r\n",
+        " - Its output contains a loss key during training, which is used to optimize the model\r\n",
+        "\r\n",
+        "Our training loop takes a batch of `Instances`, passes it through `Model.forward()`, grabs the loss `key` from the resulting dictionary, and uses backprop to compute gradients and update the model’s parameters. You don’t have to implement the training loop—all this will be taken care of by AllenNLP (though you can if you want to).\r\n",
+        "\r\n",
+        "## Constructing the Model\r\n",
+        "\r\n",
+        "In the `Model` constructor, we need to instantiate all of the parameters that we will want to train. It is often better to take most of these parameters as constructor _arguments_, so that we can configure the behavior of our model without changing the model code itself, and so that we can think at a higher level about what our model is doing. The constructor for our text classification model looks like this:\r\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "SScH9yzH8ngl"
+      },
+      "source": [
+        "@Model.register('simple_classifier')\r\n",
+        "class SimpleClassifier(Model):\r\n",
+        "    def __init__(self,\r\n",
+        "                 vocab: Vocabulary,\r\n",
+        "                 embedder: TextFieldEmbedder,\r\n",
+        "                 encoder: Seq2VecEncoder):\r\n",
+        "        super().__init__(vocab)\r\n",
+        "        self.embedder = embedder\r\n",
+        "        self.encoder = encoder\r\n",
+        "        num_labels = vocab.get_vocab_size(\"labels\")\r\n",
+        "        self.classifier = torch.nn.Linear(encoder.get_output_dim(), num_labels)"
+      ],
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "N9uqFngP8lGx"
+      },
+      "source": [
+        "You’ll notice that type annotations are used a lot in AllenNLP code - this is both for code readability (it’s _way_ easier to understand what a method does if you know the types of its arguments, instead of just their names), and because we use these annotations to do some magic for you in some cases.\r\n",
+        "\r\n",
+        "One of those cases is constructor parameters, where we can automatically construct the embedder and encoder from a configuration file using these type annotations. See the chapter on configuration files for more information. That chapter will also tell you about the call to `@Model.register()`.\r\n",
+        "\r\n",
+        "The upshot is that if you’re using the allennlp train command with a configuration file (which we show how to do below), you won’t ever have to call this constructor, it all gets taken care of for you.\r\n",
+        "\r\n",
+        "### Passing the vocabulary"
       ]
     }
   ]
