--- a/Week_18_Lab_Text_Feature_Extraction.ipynb
+++ b/Week_18_Lab_Text_Feature_Extraction.ipynb
@@ -81,6 +81,7 @@
         "id": "jdIPt9_3KaTm"
       },
       "source": [
+        "!pip install nltk\r\n",
         "import nltk\r\n",
         "import random\r\n",
         "nltk.download('names')\r\n",
@@ -397,7 +398,7 @@
       "source": [
         "##**Task 1**\r\n",
         "\r\n",
-        "Write a code that trains three different classifiers (`classifier1`, `classifier2` and `classifier3`) using the three feature extractor functions defined above `gender_features2()`, `gender_features2()` and `gender_features3()`.\r\n",
+        "Write a code that trains three different classifiers (`classifier1`, `classifier2` and `classifier3`) using the three feature extractor functions defined above `gender_features()`, `gender_features2()` and `gender_features3()`.\r\n",
         "\r\n",
         "1. Apply the the three classifiers to the `dev_test` and for each report the *percentage accuracy*, *error count*, *error list*.  **Which of the feature extraction methods performed best on classifying the `dev_test`? Can you explain why?**\r\n",
         "\r\n",
