--- a/Week_18_Lab_Text_Feature_Extraction.ipynb
+++ b/Week_18_Lab_Text_Feature_Extraction.ipynb
@@ -81,7 +81,7 @@
         "id": "jdIPt9_3KaTm"
       },
       "source": [
-        "!pip install nltk\r\n",
+        "# !pip install nltk matplotlib ## Uncomment to install\r\n",
         "import nltk\r\n",
         "import random\r\n",
         "nltk.download('names')\r\n",
